fix bug not showing selected day

--- a/src/components/DayListItem.scss
+++ b/src/components/DayListItem.scss
@@ -19,8 +19,8 @@
     }
 
     &--selected {
-      background-color: rgb(242, 242, 242);
-      // background-color: darken($white, 5%);
+      // background-color: rgb(242, 242, 242);
+      background-color: darken($white, 5%);
       color: $dark-background;
 
       &:hover {
